--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,7 @@
 #
 default: &default
   adapter: postgresql
+  host: localhost
   encoding: unicode
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
